--- a/STAT 184 Cars Final.Rmd
+++ b/STAT 184 Cars Final.Rmd
@@ -3,28 +3,34 @@ title: "Stat 184 Final Project"
 author: "Kelly Zhang, Tyler Wong, Yuheng Xie"
 date: "`r paste('Last Updated:', Sys.Date())`"
 output:
-  pdf_document: default
-  html_notebook: default
   html_document:
     df_print: paged
+  html_notebook: default
+  pdf_document: default
 ---
 
 ## Introduction
 
 **Are Used Car (Ford) Prices Different in Inner and Outer Cities?**
 
-Since 2020, notably after the pandemic, car prices have soared to new heights. In accordance to economic inflation, specifically fuel prices, there is no doubt that purchasing a new car requires immense reflection and a strong financial position. One solution to consider is to purchase a used car. 
+Since 2020, notably after the pandemic, car prices have soared to new heights. In response to economic inflation, specifically fuel prices, there’s no doubt that purchasing a new car requires considerable reflection and a strong financial position. One solution to consider is purchasing a used car. 
 
-When it comes to purchasing a used car, many factors are considered. Such factors include price of the car, the mileage, and the model. These elements have proved to be statistically significant in determining the price of a used car; however, what about the location from whom the car is purchased? 
-For instance, the supply and demand in inner cities, such as New York or Philadelphia, may be higher than that of rural or suburban areas like Harrisburg or Albany. Because inner cities have a larger population, demand may be higher, and this can lead to car price inflation. On the other hand, less populated areas may have less demand and could be cheaper. Therefore, a research question could be, "Are Used Car (Ford) Prices Different in Inner and Outer Cities?"
+When it comes to purchasing a used car, many factors are taken into consideration. These include the price of the car, its mileage, the model, and the year. These elements have proven to be statistically significant, through numerous published experiments, in determining the price of a used car. However, have we considered the impact of the location where the car is purchased? 
 
-To answer the question, our group used data from Autotrader. The Autotrader dataset generator is a website that generates CSV datasets of used cars listed at autotrader.com, which is an online auto retailer, based on a maker, a model, and a zip code. In the data set, each case represents an individual Ford car. We chose Ford as the focused model as it is the most popular car brand in the United States. This would allow for large amounts of data. We randomly selected one major city and a suburban or rural area. These locations are New York City and Albany, and Philadelphia and Harrisburg. In the dataset, there are the variables year, price, and mileage; thus, we will need to add a column for "location." This is further explained in the data visualization preparation process.
+For instance, the supply and demand in inner cities, such as New York or Philadelphia, may be higher than in rural or suburban areas like Harrisburg or Albany. Inner cities, with their larger populations, may have higher demand, leading to car price inflation. On the other hand, less populated areas may have less demand and could offer cheaper options. Therefore, a potential research question could be, “Are Used Car Prices Different in Inner and Outer Cities?”
 
-## Data Visualization Preparation
+To answer this question, our group used data from Autotrader. The Autotrader generator is a website that produces CSV datasets of used cars listed at autotrader.com, an online auto retailer, based on a maker, a model, and a zip code. In the dataset, each case represents an individual Ford car. We chose Ford as the focus model as it is the most popular car brand in the United States, allowing for a large amount of data and lower standard error. We randomly selected one major city and a suburban or rural area for comparison to allow for possible generalization. These locations are New York City and Albany, and Philadelphia and Harrisburg. The dataset includes the variables year, price, and mileage. To add location, we need to add a column titled “location.” This will be further explained in the data visualization preparation process.
+
+
+## Data Visualization Preparation & Coding Style
+
+**Coding Style**
+
+The coding style used throughout this report is Book of Apps for Statistics Teaching (BOAST) Style.
 
 **Data Visualization Preparation Process**
 
-The research conducted is split into 4 parts. The first part is data wrangling and data preparation. The data set is tidied, but the data is separated by model. Because we are focused on price and location, we add a location column and merge every Ford model to create a New York City data set. This procedure is then repeated for the following cities: Albany, Philadelphia, and Harrisburg. There are 4 data sets representing location and price. Additionally, each dataset is filtered to remove all N/A values and prices that are 0, as prices cannot be $0. 
+The research is divided into four parts, with the first part focusing on data wrangling and preparation. Because the data set is tidied, we can immediately begin the wranging process. Given our focus on price and location, we add a location column and merge all Ford models to create a data set for New York City. This process is replicated for Albany, Philadelphia, and Harrisburg, resulting in four datasets that represent location and price of used Ford cars. Then, the data frames are merged into completion, titled “All_Cars.” Furthermore, each dataset is filtered to eliminate N/A values and instances where the price is 0, as prices cannot be $0.  
 
 **Load Packages**
 
@@ -43,6 +49,7 @@ library(kableExtra)
 library(psych)
 library(tidyr)
 library(tidyverse)
+
 ```
 
 **Import Datasets**
@@ -126,13 +133,16 @@ HARS = rbind(HARS_Taurus, HARS_Mustang, HARS_Fusion, HARS_Focus, HARS_Fiesta, HA
 
 HARS$Location = rep("Harrisburg", nrow(HARS))
 
-NY <- bind_rows(NYC, ALB) %>%
+NY <- 
+  bind_rows(NYC, ALB) %>%
   na.omit()
 
-PA <- bind_rows(HARS, PHIL) %>%
+PA <- 
+  bind_rows(HARS, PHIL) %>%
   na.omit()
 
-All_Cars <- bind_rows(ALB, PHIL, NYC, HARS) %>%
+All_Cars <- 
+  bind_rows(ALB, PHIL, NYC, HARS) %>%
   na.omit() 
 
 write.csv(All_Cars, file = "All_Cars.csv") #add merged dataset to gitHUB
@@ -148,13 +158,13 @@ head(All_Cars)
 glimpse(All_Cars)
 ```
 
-Based on the data inspection, all elements are structured correctly. For year and price, the variables are measured quantitatively, with integer and floats (accepting decimal values). Regarding location, the cases are categorical and represented by characters or strings. Thus, when doing EDA, we can expect the data frame to provide an output for price, in decimals, and location, as strings. This will be important as we are able to create certain graphs, like boxplots, that account for one quantitative and one categorical variable.
+Upon inspecting the data, all elements are correctly structured. The variables ‘year’ and ‘price’ are quantitatively measured as integers and floats, respectively, allowing for decimal values. As for ‘location’, it is a categorical variable represented by strings. Therefore, during Exploratory Data Analysis (EDA), we can anticipate the data frame to produce outputs for ‘price’ in decimal form and ‘location’ as strings. This is crucial as it enables us to generate certain graphs, such as boxplots, which account for one quantitative and one categorical variable.
 
 **Side-by-Side Boxplot**
 
-For the data exploration and visualization process, we create a box plot as there is categorical and quantitative data. A box plot is a strong data visualization to portray the relationship between these variables, and the visualization of a five-number summary. 
+In the data exploration and visualization process, we create a boxplot using both the categorical and quantitative data. A box plot serves as an effective visualization tool to depict the relationship between these variables, as well as to display a five-number summary. 
 
-***Five-number summary***: descriptive statistics that output a minimum value, first-quartile (25% or 25th percentile), median (50% or 50th percentile), third quartile (75% or 75th percentile), and the maximum value. 
+***Five-number summary***: Descriptive statistics output the minimum value, first quartile (25th percentile), median (50th percentile), third quartile (75th percentile), and the maximum value.
 
 ##### Boxplot 1: New York
 
@@ -192,7 +202,13 @@ mapping = aes(x = Location, y = price, fill = Location)) +
 
 **Boxplot Observations:**
 
-From the boxplot 1 and 2, New York and Pennsylvania, there are multiple observations that can be insightful. Firstly, notice the amount of outliers. These outliers are difficult to remove due to the different confounding variables regarding price variation. Although we were able to remove few outliers with cars that were $0, higher outliers are not as easily found. The second observation is the actual IQR values. The IQR range (third quartile - first quartile) and median are similar in both locations, suggesting that there may not be a statistically significant difference. 
+In the initial comparative boxplot, which compares Albany and New York City, note the three features: the outliers, the interquartile range (IQR), and the median. During the data preparation phase, one of our objectives was to eliminate prices that were unrealistic in a real-world context, such as a price of $0 or NA. Outliers are challenging to eliminate, and given their abundance, it’s preferable to maintain these data points to preserve the majority of the dataset. Consequently, even though the maximum value is around $150,000, which may seem illogical compared to the median, we cannot determine whether or not it is a confirmed outlier. A significant advantage of a boxplot is its use of the median value instead of the mean. In most situations, the mean value would be preferred. However, due to the number of outliers, the median value provides a more accurate representation as it minimizes the impact of outliers, thereby preventing the influence of a potential skew.
+
+The IQR (third quartile minus the first quartile) is similar to the median, suggesting that the distribution or spread of the data is close. This also implies that the prices of individual cars are likely to be similar.
+
+The median is approximately $25,000 USD, and unfortunately, there appears to be insufficient evidence to suggest a correlation between the location of the car purchase and its price.
+
+The second boxplot yields almost identical results to the first. The outliers appear to dominate the plot. Interestingly, the outliers and IQR closely match those of the New York plot, indicating that the prices of used Ford models are consistent across all locations, as are their medians. This observation will be further investigated in the forthcoming bar graph visualization.
 
 ### **Bar Graphs**
 
@@ -200,7 +216,8 @@ From the boxplot 1 and 2, New York and Pennsylvania, there are multiple observat
 
 ```{r}
 
-NY_Median <- NY %>%
+NY_Median <- 
+  NY %>%
   group_by(Location) %>%
   summarise(median_price = median(price), na.rm = TRUE)
 
@@ -222,7 +239,8 @@ mapping = aes(x = Location, y = median_price, fill = Location)) +
 ##### Bar Graph 2: Pennsylvania
 
 ```{r}
-PA_Median <- PA %>%
+PA_Median <- 
+  PA %>%
   group_by(Location) %>%
   summarise(median_price = median(price), na.rm = TRUE)
 
@@ -242,7 +260,13 @@ mapping = aes(x = Location, y = median_price, fill = Location)) +
 ```
 **Bar Graph Observations:**
 
-From the side-to-side boxplot, we concluded that there is a minor difference between the inner and outer city car prices. The bar graphs allow us to "zoom in" on this visualization by wrangling both data sets with group_by() and summarise() function. Using these functions, we can calculate the median for both data sets. Typically, the mean is used for discussing averages; however, as found in the boxplots, there are many outliers, which are difficult to remove. Thus, we are able to use median to minimize the effects of outliers and influential points in the data. As observed in both plots, the median prices are not significantly different between locations. In fact, there may only be a noticeable thousand dollar distinction. 
+From the side-by-side boxplot, we concluded that there is a minor difference between the inner and outer city car prices. The bar graphs allow us to “zoom in” on this visualization by wrangling both data sets with the group_by() and summarise() functions. Using these functions, we can calculate the median for both data sets.
+
+In the first bar graph, between Albany and New York City, the median is close to a margin of $2000 USD. From a numerical standpoint, a difference of $2000 is not significant when compared to the range of values, which is from around $1000 to $150,000 USD. However, in a real-life context, $2000 might be considered a deal breaker for most clients. Thus, it’s difficult to determine whether or not this difference is important based purely on EDA, without further hypothesis testing. But, with the result of the second graph and boxplot, we can create a strong inference.
+
+When considering the median prices in Pennsylvania, Harrisburg and Philadelphia, the median is approximately $1000 USD. One similarity is that the average car prices in Harrisburg and Albany are higher than those in Philadelphia and New York City. On one hand, this is surprising as cities often struggle with economic inflation. On the other, outer cities may have a lower supply as there are fewer residents.
+
+Based on the observations of both graphs, we remain confident that there is still no significant difference in price based on location.
 
 ### **Scatterplot Graphs**
 
@@ -250,7 +274,7 @@ From the side-to-side boxplot, we concluded that there is a minor difference bet
 
 **Scatterplot Process & Purpose:**
 
-The scatterplot is a model that is different from our general data visualization process. One of the main differences is the x-axis includes the variable "year," meaning there are 3 variables of interest (price, year, location), rather than the original two variables, price and location. The reason a scatterplot was introduced was to display the overall trend of Ford cars to support the two regression lines. Without each individual data point, we may not understand where the inserction between lines occur or why it is a positive slope.
+The scatterplot represents a different approach from our general data visualization process. One of the main differences is that the scatterplot includes the variable 'year' on the x-axis, which means there are three variables of interest (price, year, location) instead of the original two (price and location). The scatterplot was introduced to display the overall trend of Ford car prices and to provide a visual aid for the two regression lines. Without each individual data point, it might be difficult to understand where the intersection between the lines occurs or why there is a positive slope.
 
 ```{r}
 
@@ -261,9 +285,11 @@ gf_point(price ~ year, color = ~ Location, data = NY) %>%
 
 **Scatterplot 1 Observations**
 
-In the first scatterplot, there are multiple observations to note. Firstly, notice that there is an intersection point between the lines. This is interesting as it provides evidence that there may be a significant interaction term between location and price. We can later test this theory by using a hypothesis test and fitted model. 
+In the first scatterplot, there are multiple observations to note. Firstly, it’s noticeable that there is an intersection point between the lines. This is interesting as it suggests that there might be a significant interaction term between location and price. Unfortunately, a hypothesis test would be required to make this inference.
 
-Secondly, the heavy increasing trend towards the year 2020. Almost in the shape of a helix, the values on the far right introduce an all-time-high price at around $150 000. Given that this may be an outlier, when observing the data that follows, there is no doubt that as the year increases, so does the price. In the context of the data set, this provides evidence that the newer the car, the higher the price. Although this does not necessarily support our location and price research inquiry, it is important to explore other variables when location and price seem to be insignificant. 
+Secondly, there is a noticeable increasing trend towards the year 2020. The values, almost in the shape of a helix, on the far right indicate an all-time-high price at around $150,000. Although this might be an outlier, it’s clear from the following data that the price increases as the year progresses. In the context of this data set, it provides evidence that the price of a car increases with its novelty.
+
+Although this observation doesn’t necessarily support our research inquiry into the relationship between location and price, it underscores the importance of exploring other variables when the significance of location and price appears to be minimal. 
 
 
 ##### Scatterplot Graph 2: Pennsylvania
@@ -276,7 +302,7 @@ gf_point(price ~ year, color = ~ Location, data = PA) %>%
 
 **Scatterplot 2 Observations:**
 
-The second scatterplot, between Harrisburg and Philadephia, is notable because the lines are extremely similar. This is contradicting information from the first scatterplot, in which there were small differences in slope and y-intercept, specifically between the 1990 to 2010. This provided evidence that there may be a difference in locations and price. However, from the Pennsylvania scatterplot, the plot shows little evidence that there is a relevant difference in prices for Harrisburg and Philadephia. 
+The second scatterplot, which compares Harrisburg and Philadelphia, is notable because the regression lines are extremely similar. This contradicts the information from the first scatterplot, which showed small differences in slope and y-intercept, specifically between the years 1990 to 2010. This suggested that there might be a difference in car prices between locations. However, the scatterplot for Pennsylvania shows little evidence of a significant difference in car prices between Harrisburg and Philadelphia. 
 
 
 ### **Summary Table**
@@ -285,7 +311,8 @@ The second scatterplot, between Harrisburg and Philadephia, is notable because t
 
 ```{r}
 # Get descriptive statistics of price and location
-groupStats_NY <- psych::describeBy(
+groupStats_NY <- 
+  psych::describeBy(
   x = NY$price,
   group = NY$Location,
   na.rm = TRUE,
@@ -297,7 +324,8 @@ groupStats_NY <- psych::describeBy(
   digits = 4)
 
 # Set row names as location; select useful columns
-groupStats_NY <- groupStats_NY %>%
+groupStats_NY <- 
+  groupStats_NY %>%
   tibble::remove_rownames() %>%
   tibble::column_to_rownames(
   var = "group1") %>%
@@ -333,7 +361,8 @@ The most significant aspect of the summary table is median. Because we are inter
 ##### Summary Table 2: Pennsylvania
 
 ```{r}
-groupStats_PA <- psych::describeBy(
+groupStats_PA <- 
+  psych::describeBy(
   x = PA$price,
   group = PA$Location,
   na.rm = TRUE,
@@ -345,7 +374,8 @@ groupStats_PA <- psych::describeBy(
   digits = 4)
 
 # Set row names as location; select useful columns
-groupStats_PA <- groupStats_PA %>%
+groupStats_PA <- 
+  groupStats_PA %>%
   tibble::remove_rownames() %>%
   tibble::column_to_rownames(
   var = "group1") %>%
